[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/SubmarineTheme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/LCDBlock.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/PauseScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 3
font_data = ExtResource( 2 )

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BackgroundRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -21.5
margin_bottom = 21.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
text = "{pause_text}"
align = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_left = 119.0
margin_top = 54.0
margin_right = 201.0
margin_bottom = 76.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
size_flags_horizontal = 4
theme = ExtResource( 1 )
shortcut_in_tooltip = false
text = "{restart_text}"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_left = 127.0
margin_top = 80.0
margin_right = 193.0
margin_bottom = 102.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
size_flags_horizontal = 4
theme = ExtResource( 1 )
shortcut_in_tooltip = false
text = "{back_text}"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
